# cerbena-browser

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  SECURITY.md  SUPPORT.md  docusaurus.config.js  package-lock.json  package.json  sidebars.en.js  sidebars.ru.js  styles.css  waf.css
cmd/launcher/: Cargo.toml
cmd/launcher/src/: lib.rs  main.rs
cmd/launcher/tests/: docs_quality_tests.rs  docs_quality_tests_core.rs  docs_quality_tests_core_terms.rs  git_hygiene_contract_tests.rs  installer_cleanup_contract_tests.rs  launcher_stability_tests.rs  launcher_tests.rs  release_pipeline_contract_tests.rs  security_gates_contract_tests.rs  traffic_isolation_contract_tests.rs  vulnerability_gates_contract_tests.rs
docs/: README.md
internal/: README.md
internal/api_local/: Cargo.toml
internal/api_local/src/: default_browser.rs  home.rs  hooks.rs  lib.rs  local_api.rs  panic.rs  pip.rs  search.rs  security.rs
internal/api_local/tests/: api_local_tests.rs  home_panic_tests.rs  ux_controls_tests.rs
internal/api_mcp/: Cargo.toml
internal/api_mcp/src/: lib.rs
internal/api_mcp/tests/: api_mcp_tests.rs
internal/engine/: Cargo.toml
internal/engine/src/: artifact.rs  camoufox.rs  chromium.rs  contract.rs  firefox_esr.rs  lib.rs  librewolf.rs  progress.rs  registry.rs  runtime.rs  runtime_api.rs  runtime_artifacts.rs  runtime_binary.rs  runtime_compat.rs  runtime_download.rs  runtime_download_core.rs  runtime_facade_helpers.rs  runtime_injection.rs  runtime_install.rs  runtime_install_core.rs  runtime_launch_chromium.rs  runtime_launch_dispatch.rs  runtime_launch_firefox.rs  runtime_launch_policy.rs  runtime_resolution.rs  runtime_resolution_core.rs  runtime_tests.rs  runtime_tests_cases.rs  ungoogled_chromium.rs  update_policy.rs  wayfern.rs
internal/engine/tests/: adapter_tests.rs  profile_fingerprint_engine_tests.rs  update_policy_tests.rs
internal/extensions/: Cargo.toml
internal/extensions/src/: audit.rs  first_launch.rs  import_sources.rs  lib.rs  manager.rs  model.rs  policy.rs
internal/extensions/tests/: extensions_tests.rs
internal/import_export/: Cargo.toml
internal/import_export/src/: lib.rs
internal/import_export/tests/: import_export_tests.rs
internal/network_policy/: Cargo.toml
internal/network_policy/src/: dns.rs  dns_tab.rs  lib.rs  policy.rs  proxy.rs  service_catalog.rs  tor.rs  updater.rs  vpn.rs  vpn_proxy_tab.rs
internal/network_policy/tests/: policy_tests.rs  policy_tests_core.rs
internal/profile/: Cargo.toml
internal/profile/src/: audit.rs  cache.rs  crypto.rs  errors.rs  lib.rs  lock.rs  manager.rs  manager_core.rs  model.rs  profile_modal.rs  sqlite_retention.rs  storage.rs  storage_core.rs  storage_core_wipe_targets.rs  wipe.rs
internal/profile/tests/: profile_manager_tests.rs  profile_manager_tests_core.rs
internal/profile/tests/profile_manager_tests_core/: helpers.rs  lifecycle.rs  runtime_security.rs  wipe.rs
internal/security_pack/: Cargo.toml
internal/security_pack/src/: lib.rs
internal/security_pack/tests/: security_pack_tests.rs
internal/sync_client/: Cargo.toml
internal/sync_client/src/: controls.rs  e2e.rs  lib.rs  performance.rs  protocol.rs  restore.rs  server.rs  snapshots.rs  transport.rs
internal/sync_client/tests/: sync_tests.rs
scripts/: build-installer.ps1  check-text-integrity.mjs  docker-runtime-preflight.ps1  generate-release-artifacts.ps1  git-hygiene-preflight.ps1  local-ci-preflight.ps1  new-release-signing-material.ps1  published-updater-e2e.ps1  release-signing-core.ps1  release-signing.ps1  release.ps1  security-gates-preflight.ps1  text-integrity.config.json  text-integrity.md  update-version.ps1  version-sync-targets.json  vulnerability-docker-preflight-core-lib.ps1  vulnerability-docker-preflight-core.ps1  vulnerability-docker-preflight.ps1  vulnerability-gates-preflight.ps1
styles/: base.controls.css  base.css  base.feature-overrides.css  base.shell.css  base.tokens.css  base.utilities.css
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
ui/desktop/src-tauri/assets/service-catalog/: README.md
ui/desktop/src-tauri/assets/service-catalog/v1/: catalog.json  service-domains.json
ui/desktop/src-tauri/capabilities/: default.json
ui/desktop/src-tauri/runtime/network-sandbox-container/: Dockerfile  container_socks_proxy.go  entrypoint.sh  openvpn_dns_sync.sh  sysctl_wrapper.sh
ui/desktop/src-tauri/src/: certificate_runtime.rs  commands.rs  device_posture.rs  envelope.rs  extensions_commands.rs  extensions_commands_cmd_list_library.rs  extensions_commands_cmd_policy_eval.rs  extensions_commands_cmd_remove_item.rs  extensions_commands_cmd_set_profiles.rs  extensions_commands_cmd_update_item.rs  extensions_commands_core.rs  extensions_commands_first_launch.rs  extensions_commands_import_source_local_file.rs  extensions_commands_import_source_local_folder.rs  extensions_commands_import_source_store.rs  extensions_commands_library.rs  extensions_commands_profile.rs  extensions_commands_refresh.rs  extensions_commands_tests.rs  extensions_commands_transfer.rs  extensions_commands_transfer_core.rs  extensions_commands_transfer_export.rs  extensions_commands_transfer_import_manifest.rs  extensions_commands_util.rs  extensions_commands_util_archive_io.rs  extensions_commands_util_archive_manifest.rs  extensions_commands_util_library.rs  extensions_commands_util_policy.rs  extensions_commands_util_store.rs  extensions_commands_util_transfer.rs  identity_commands.rs  install_registration.rs  instance_handoff.rs  keepassxc_bridge.rs  keepassxc_bridge_helpers.rs  keepassxc_bridge_helpers_core.rs  keepassxc_bridge_helpers_core_support.rs  keepassxc_bridge_helpers_core_system.rs  launch_sessions.rs  launch_sessions_core.rs  (+193 more)
ui/desktop/src-tauri/src/platform/: certificates.rs  certificates_linux.rs  certificates_windows.rs  dialogs.rs  dialogs_linux.rs  dialogs_windows.rs  mod.rs  release_security.rs  release_security_linux.rs  release_security_windows.rs  secret_store.rs  secret_store_linux.rs  secret_store_windows.rs
(+247 files in other folders)
