[package]
name = "browser-import-export"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64 = "0.22"
browser-profile = { path = "../profile" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
