[package]
name = "browser-network-policy"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
