[package]
name = "browser-profile"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
