[package]
name = "browser-sync-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
browser-profile = { path = "../profile" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
